namespace java test_enum

enum OrganizationType {
    TYPE_A = 1
    TYPE_B = 2
}

struct Organization {
    1: OrganizationType OrganizationType
}
